--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/amy-chen-0a1232258/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/amychen108" class="social-icon"><i class="fab fa-github"></i></a>
-                <a href="your-instagram-url" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/ashenstarlight/" class="social-icon"><i class="fab fa-instagram"></i></a>
             </div>
         </section>
     </main>
